--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,9 @@ jobs:
       - name: Generate Hexo Site
         run: npx hexo generate
 
-      - name: Deploy to Cloudflare Pages
+      - name: Deploy to Cloudflare Worker
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-        run: npx wrangler pages deploy public --project-name=pokerface
+        # 这里的关键是去掉 'pages' 和 '--project-name'，让它读取本地配置
+        run: npx wrangler deploy
